--- a/package.json
+++ b/package.json
@@ -1,24 +1,29 @@
 {
   "name": "webpacktemplate",
   "version": "1.0.0",
-  "description": "Webpack Template Repository",
+  "description": "Battleship",
   "main": "index.js",
   "scripts": {
     "build": "webpack",
     "dev": "webpack serve",
-    "deploy": "git subtree push --prefix dist origin gh-pages"
+    "deploy": "git subtree push --prefix dist origin gh-pages",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.26.9",
+    "@babel/preset-env": "^7.26.9",
     "@eslint/js": "^9.21.0",
+    "babel-jest": "^29.7.0",
     "css-loader": "^7.1.2",
     "eslint": "^9.21.0",
     "eslint-config-prettier": "^10.0.2",
     "globals": "^16.0.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
+    "jest": "^29.7.0",
     "prettier": "3.5.2",
     "style-loader": "^4.0.0",
     "webpack": "^5.98.0",
